--- a/8.md
+++ b/8.md
@@ -171,8 +171,7 @@ Here’s the best study we’ve been able to find so far on how to predict perfo
 ```
 
 None of the tests are very good. A correlation of 0.5 is pretty weak, so even if you try to predict using the best available techniques, you’re going to be “wrong” much of the time: candidates that look bad will often turn out good, and vice versa. Anyone who’s hired people before will tell you that’s exactly what happens, and there is some systematic evidence for this [^:`<blockquote><p>
- Career choices, for instance, are often abandoned or regretted. An American Bar Association survey found that 44% of lawyers would recommend that a young person not pursue a career in law. A study of 20,000 executive searches found that 40% of senior-level hires “are pushed out, fail or quit within 18 months.” More than half of teachers quit their jobs within four years.
-</p></blockquote>
+ Career choices, for instance, are often abandoned or regretted. An American Bar Association survey found that 44% of lawyers would recommend that a young person not pursue a career in law. A study of 20,000 executive searches found that 40% of senior-level hires “are pushed out, fail or quit within 18 months.” More than half of teachers quit their jobs within four years.</blockquote>
 <p>From <a href="http://heathbrothers.com/books/decisive/"><em>Decisive</em></a>, by Chip and Dan Heath.`].
 
 Because hiring is so expensive, employers *really* want to pick the best candidates and they know exactly what the job requires. If even they, using the best available tests, can’t figure out who’s going to perform best in advance, you probably don’t have much chance.
@@ -230,8 +229,7 @@ Also consider trying one or two *wildcards* to further broaden your experience. 
 Many successful people did exactly that. Tony Blair <a href="http://www.telegraph.co.uk/culture/3649202/Rock-n-rule.html">worked as a rock music promoter</a> before going into politics. As we saw, Condoleezza Rice was a classical musician before she entered politics, while Steve Jobs even spent a year in India on acid, and considered moving to Japan to become a zen monk. That’s some serious &#8220;exploration&#8221;.
 
 Today, it&#8217;s widely accepted that many people will work in several sectors and roles across their lifetime. The typical 25 to 34-year-old changes jobs every three years,[^:`<blockquote><p>
- Median employee tenure was generally higher among older workers than younger ones. For example, the median tenure of workers ages 55 to 64 (10.4 years) was more than three times that of workers ages 25 to 34 years (3.0 years). A larger proportion of older workers than younger workers had 10 years or more of tenure. Among workers ages 60 to 64, 58 percent were employed for at least 10 years with their current employer in January 2014, compared with only 12 percent of those ages 30 to 34.
-</p></blockquote>
+ Median employee tenure was generally higher among older workers than younger ones. For example, the median tenure of workers ages 55 to 64 (10.4 years) was more than three times that of workers ages 25 to 34 years (3.0 years). A larger proportion of older workers than younger workers had 10 years or more of tenure. Among workers ages 60 to 64, 58 percent were employed for at least 10 years with their current employer in January 2014, compared with only 12 percent of those ages 30 to 34.</blockquote>
 <p><a href="https://web.archive.org/web/20170420130623/https://www.bls.gov/news.release/tenure.nr0.htm">Archived link</a>, retrieved 24-Apr-2017.`] and changes are not uncommon later too.
 
 Trying out lots of options can also help you avoid one of the biggest career mistakes: <a href="/articles/4-biases-to-avoid-in-career-decisions/">considering too few options</a>. We’ve met lots of people who stumbled into paths like PhDs, medicine or law because they felt like the default at the time, but who, if they had considered more options, could easily have found something that fit them better. Pushing yourself to try out several areas will help you to avoid this mistake. Try to settle on a single goal too early, however, and you could miss a great option.
@@ -349,18 +347,20 @@ If you’re unsure, keep <a href="/career-guide/career-capital/">building flexib
 
 ## Jess &#8211; a case study in exploring
 
+```
 <div id="case-study-quote-19261" class="panel clearfix">
     <div class="col-xs-9 col-sm-8 col-md-9">
         <blockquote class="no-indent no-margin-bottom">
             <div class="case-study-quote__text">&ldquo;80,000 Hours has nothing short of revolutionised the way I think about my career.&rdquo;</div>
             <p class="case-study-quote__read-more margin-top-small"><a href="https://80000hours.org/career-guide/member-stories/jess-whittlestone/" class="btn btn-tertiary">Read Jess's story</a>
-
         </blockquote>
     </div>
     <div class="col-xs-3 col-sm-4 col-md-3 image-frame">
         <div class="image-mask-circle image-mask-circle-border"> <img src="https://cdn.80000hours.org/wp-content/uploads/2014/10/jess-transparent_0-150x150.png" alt="Jess portrait photo"></div>
     </div>
 </div>
+```
+
 When Jess graduated from maths and philosophy a couple of years ago, she was interested in academia and leaned towards studying philosophy of mind, but was concerned that it would have little impact.
 
 So the year after she graduated, she spent several months working in finance. She didn’t think she’d enjoy it, and she turned out to be right, so she felt confident eliminating that option. She also spent several months working in non-profits, and reading about different research areas.
