--- a/8.md
+++ b/8.md
@@ -81,7 +81,7 @@ All this is why *personal fit* is one of the key factors to look for in a job. W
 
 If we put together everything we’ve covered so far in the guide, this would be our formula for a perfect job:
 
-<img src="https://cdn.80000hours.org/wp-content/uploads/2017/06/80K_articles_personalfitformula_V5.jpg" alt="The personal fit multiplier " width="1024" height="268" class="aligncenter size-large wp-image-35266" />
+![The personal fit multiplier](https://cdn.80000hours.org/wp-content/uploads/2017/06/80K_articles_personalfitformula_V5.jpg)
 
 If you’re comparing two career options, you can use these factors to make a side-by-side comparison (<a href="/articles/framework/">read more</a>).
 
