--- a/8.md
+++ b/8.md
@@ -379,6 +379,8 @@ At the end of her PhD, she can either continue in academia, or switch into polic
 1. When you need to make your final decision, you can use the narrowing down process again.
 1. If you’d like to find out more about how to make good decisions and predictions, we recommend <a href="http://heathbrothers.com/books/decisive/">*Decisive*</a> by Chip and Dan Heath, and <a href="http://www.amazon.com/Superforecasting-Science-Prediction-Philip-Tetlock/dp/0804136696">*Superforecasting*</a> by Philip Tetlock.
 
+</div>
+
 ## Conclusion
 
 We like to imagine we can work out what we&#8217;re good at through reflection, in a flash of insight. But that&#8217;s not how it works.
