--- a/9.md
+++ b/9.md
@@ -48,7 +48,7 @@ We recommend working on one area at a time. Skim through and pick the area that 
 
 *Reading time: 30 minutes.*
 
-## 1. Don&#8217;t forget to take care of yourself
+## 1. Don't forget to take care of yourself
 
 ![](https://cdn.80000hours.org/wp-content/uploads/2017/04/dog_vacuum.gif)[`To avoid colds and flus it’s important to vacuum yourself daily. We recommend Dyson.`]
 
@@ -68,10 +68,8 @@ Adam Grant&#8217;s research is also another reason why we <a href="/career-guide
 ## 2. If necessary, make mental health your top priority
 
 About 20% of people in their twenties have some kind of mental health problem.[^:`Different surveys give different results, but 20% seems like a reasonable ballpark. For instance, the US National Institute of Mental Health says that 20.1% of 18-25 year olds suffer “any mental illness”.</p>
-<p></p>
 <p><a href="https://web.archive.org/web/20160322094953/http://www.nimh.nih.gov/health/statistics/prevalence/any-mental-illness-ami-among-us-adults.shtml">Archived link</a>, retrieved 22 March 2016</p>
 <p>The NIMH also finds that 9.3% of people aged 18-25 experienced a major depressive incident in the last 12 months, compared to only 5.2% for those above 50.</p>
-<p></p>
 <p><a href="https://web.archive.org/web/20160322095040/http://www.nimh.nih.gov/health/statistics/prevalence/major-depression-among-adults.shtml">Archived link</a>, retrieved 22 March 2016.`]
 
 If you’re suffering from a mental health issue &#8211; be it anxiety, bipolar disorder, ADHD, depression or something else &#8211; then make dealing with it or learning to cope your top priority. It&#8217;s one of the best investments you can ever make both for your own sake and your ability to help others.
