--- a/9.md
+++ b/9.md
@@ -101,8 +101,7 @@ We were surprised to learn that the biggest risk to our productivity is probably
 
 Repetitive strain injury (RSI) is also a hazard of modern workplaces, and can even permanently damage your ability to type or use a mouse.
 
-Will spoke to over ten health professionals about his back pain before he got any useful advice. This isn’t uncommon either, since the causes of much back pain are unknown,[^:`<blockquote>Most back pain is what's known as "non-specific" (there's no obvious cause) or "mechanical" (the pain originates from the joints, bones or soft tissues in and around the spine).
-</p></blockquote>
+Will spoke to over ten health professionals about his back pain before he got any useful advice. This isn’t uncommon either, since the causes of much back pain are unknown,[^:`<blockquote>Most back pain is what's known as "non-specific" (there's no obvious cause) or "mechanical" (the pain originates from the joints, bones or soft tissues in and around the spine).</blockquote>
 <p>This is from the UK’s National Health Service, <a href="https://web.archive.org/web/20170406234850/http://www.nhs.uk/Conditions/Back-pain/Pages/Causes.aspx">archived link</a>, retrieved 6-April-2017.`] and it can be hard to treat.
 
 Nevertheless, you can reduce your chances of back pain and RSI in a couple of ways. First, correctly set up your desk and maintain good posture &#8211; see advice <a href="http://www.nhs.uk/Livewell/workplacehealth/Pages/Howtositcorrectly.aspx">here</a>, <a href="http://www.nhs.uk/Livewell/workplacehealth/Pages/laptophealth.aspx">here</a> and <a href="http://www.mayoclinic.org/healthy-lifestyle/adult-health/in-depth/office-ergonomics/art-20046169">here</a>. Second, regularly change position (the <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique">pomodoro technique</a> is useful). Third, exercise regularly.
@@ -138,12 +137,14 @@ Being happier is not only good in itself, but it can also <a href="https://80000
 1. <b>Do something kind each day,</b> like donating to charity, giving someone a compliment, or helping someone at work.
 1. <b>Practice <a href="http://www.gostrengths.com/what-is-active-and-constructive-responding/">active constructive responding</a></b> to celebrate successes with others.
 1. <b>Adopt the growth mindset.</b> If you believe you can improve your abilities, you&#8217;ll be more resilient to failure and harder working. See the book, <a href="http://www.amazon.com/Mindset-Psychology-Success-Carol-Dweck/dp/0345472322"><i>Mindset</i></a>, by Carol Dweck, which reviews this research and discusses how the mindset can be learned.
-1. <b>Craft your job.</b> In an <a href="/career-guide/job-satisfaction/">earlier article</a> we covered the ingredients of a satisfying job. Often it’s possible to adapt your job so that it involves more of the satisfying ingredients, and less of what you don’t enjoy. It could be as simple as trying to spend more time with a friend at work.</p>It can also be possible to find more meaning in your work. Adam Grant did a study of fundraisers for university scholarships. He found that introducing them to someone who had benefited from the scholarships made them dramatically more productive.[^:`<blockquote><p>
+1. <b>Craft your job.</b> In an <a href="/career-guide/job-satisfaction/">earlier article</a> we covered the ingredients of a satisfying job. Often it’s possible to adapt your job so that it involves more of the satisfying ingredients, and less of what you don’t enjoy. It could be as simple as trying to spend more time with a friend at work.</p><p>
+It can also be possible to find more meaning in your work. Adam Grant did a study of fundraisers for university scholarships. He found that introducing them to someone who had benefited from the scholarships made them dramatically more productive.[^:`<blockquote><p>
  In his 2007 study, Grant and a team of researchers arranged for one group of call center workers to interact with scholarship students who were the recipients of the school’s fundraising largess. It wasn’t a long meeting — just a five-minute session where the workers were able to ask the student about his or her studies. But over the next month, that little chat made a big difference. The call center was able to monitor both the amount of time its employees spent on the phone and the amount of donation dollars they brought in. A month later, callers who had interacted with the scholarship student spent more than two times as many minutes on the phone, and brought in vastly more money: a weekly average of $503.22, up from $185.94.
 </p></blockquote><em>Putting a Face to a Name: The Art of Motivating Employees</em>, by Wharton, 2010, <a href="http://web.archive.org/web/20170405233236/http://knowledge.wharton.upenn.edu/article/putting-a-face-to-a-name-the-art-of-motivating-employees/">Archived link</a>, retrieved 5 April 2017.</p>
 <blockquote>In summary, our intervention provided callers with an opportunity to spend 10 min interacting respectfully with only one beneficiary of their work. One month later, over the course of 1 week, these callers spent significantly more time on the phone, and secured significantly more donation money, than their counterparts who read a letter by the beneficiary or had no exposure to the beneficiary. Further, the persistence and performance of the callers in the control conditions did not change, whereas callers in the intervention condition spent 2.42 times as many minutes on the phone, and secured 2.71 times as much money, as they had before the intervention. It appears that our small manipulation caused a large difference in caller motivation.</blockquote>
 <p></p>
-<p>Adam Grant, Elizabeth M. Campbell, Grace Chen, Keenan Cottone, David Lapedis, Karen Lee (2007), "Impact and the art of motivation maintenance: The effects of contact with beneficiaries on persistence behavior", Organizational Behavior and Human Decision Processes, 103(1), 53-67. <a href="http://web.archive.org/web/20170406000932/https://faculty.wharton.upenn.edu/wp-content/uploads/2012/05/GrantCampbellChenCottoneLapedisLee_ImpactAndArt.pdf">Archived link</a>, published May 2007.`] This is especially important if you’re pursuing a more abstract way of doing good, like <a href="/articles/earning-to-give/">earning to give</a>. How can you make it seem more vivid?</p>Job crafting exercises have been evaluated in trials and found to have positive effects. Here is a <a href="https://web.archive.org/web/20170330213035/http://positiveorgs.bus.umich.edu/wp-content/uploads/What-is-Job-Crafting-and-Why-Does-it-Matter1.pdf">review of some of the research</a>. Here is a <a href="https://hbr.org/2010/06/managing-yourself-turn-the-job-you-have-into-the-job-you-want">more practical introduction</a>.
+<p>Adam Grant, Elizabeth M. Campbell, Grace Chen, Keenan Cottone, David Lapedis, Karen Lee (2007), "Impact and the art of motivation maintenance: The effects of contact with beneficiaries on persistence behavior", Organizational Behavior and Human Decision Processes, 103(1), 53-67. <a href="http://web.archive.org/web/20170406000932/https://faculty.wharton.upenn.edu/wp-content/uploads/2012/05/GrantCampbellChenCottoneLapedisLee_ImpactAndArt.pdf">Archived link</a>, published May 2007.`] This is especially important if you’re pursuing a more abstract way of doing good, like <a href="/articles/earning-to-give/">earning to give</a>. How can you make it seem more vivid?</p><p>
+Job crafting exercises have been evaluated in trials and found to have positive effects. Here is a <a href="https://web.archive.org/web/20170330213035/http://positiveorgs.bus.umich.edu/wp-content/uploads/What-is-Job-Crafting-and-Why-Does-it-Matter1.pdf">review of some of the research</a>. Here is a <a href="https://hbr.org/2010/06/managing-yourself-turn-the-job-you-have-into-the-job-you-want">more practical introduction</a>.
 
 To get more exercises, check out the free courses on <a href="https://www.clearerthinking.org/">Clearer Thinking</a>, and read <a href="http://www.amazon.com/The-How-Happiness-Approach-Getting/dp/0143114956"><i>The How of Happiness</i></a> by Sonja Lyubomirsky.
 
@@ -213,10 +214,7 @@ In these clusters, it’s much easier to build professional connections, and the
 <p>We’re not aware of much other research into the importance of location in life satisfaction, so we only have weak confidence in these correlation coefficients.</p>
 <p>This book is also the source for the claim that three quarters of US entertainers and performers live in LA.`] There are also significant pay differences between regions, which are often larger than the differences in the cost of living.
 
-But that’s only part of what’s special about these regions. The world’s ten largest urban economic regions hold only 6.5% of the world’s population, but account for 57% of patented innovations, 53% of the most cited scientists and 43% of economic output.[^:`<blockquote>The world’s 10 largest mega-regions in terms of LRP house<br />
- only about 416 million people, or 6.5 percent of the world's population, but account for 42.8<br />
- percent of economic activity ($13.4 trillion), 56.6 percent of patented innovations, and 55.6<br />
- percent of the most-cited scientists.</blockquote>
+But that’s only part of what’s special about these regions. The world’s ten largest urban economic regions hold only 6.5% of the world’s population, but account for 57% of patented innovations, 53% of the most cited scientists and 43% of economic output.[^:`<blockquote>The world’s 10 largest mega-regions in terms of LRP house only about 416 million people, or 6.5 percent of the world's population, but account for 42.8 percent of economic activity ($13.4 trillion), 56.6 percent of patented innovations, and 55.6 percent of the most-cited scientists.</blockquote>
 Florida, Richard, Tim Gulden, and Charlotta Mellander. "The rise of the mega-region." Cambridge Journal of Regions, Economy and Society 1.3 (2008): 459-476. <a href="http://web.archive.org/web/20170406002740/https://static.sys.kth.se/itm/wp/cesis/cesiswp129.pdf">Archived link</a>, retrieved April-2017.`] This suggests that, in terms of innovation and economic output, the people in these regions are about eight times more productive than the average person.
 
 These regions in 2008 were: (1) Greater Tokyo (2) Boston-Washington corridor (3) Chicago to Pittsburgh (4) Amsterdam-Brussels-Antwerp (5) Osaka-Nagoya (6) London and South East England (7) Milan to Turin (8) Charlotte to Atlanta (9) Southern California (LA to San Diego) (10) Frankfurt to Mannheim. Silicon Valley, Paris, Berlin, and Denver-Boulder also deserve a mention as having some of the highest rates of innovation per person.
