--- a/11.md
+++ b/11.md
@@ -47,7 +47,7 @@ The key idea is that getting a job is about convincing someone that you have som
 *Reading time: 15 minutes.*
 
 <div class="panel clearfix">
-    <h2 class="no_toc">The bottom line</h2>
+<h2 class="no_toc">The bottom line</h2>
 
 . Getting a job is a sales process. Think of it from the employer’s point of view, and do what the employer will find most convincing.
 . Get lots of leads, especially by asking for introductions.
@@ -146,9 +146,8 @@ In case you want to browse job listings, which does sometimes work, and can be a
 
 ## Stage 2: Conversion
 
-<div id="youtube-E3kP2A80KIw" class="wrap-video">
-    <div class="lazyYT" data-youtube-id="E3kP2A80KIw" data-ratio="16:9" data-parameters="modestbranding=1&show_info=1&theme=light" data-autoplay="0"></div>
-</div>
+!ytb-E3kP2A80KIw
+
 When you’re in contact with someone who has the power to hire you, how do you convince them?
 
 Again, think about it from their point of view. Once at 80,000 Hours, we were trying to hire a web engineer. Most applicants just filled out our application form, while one sent us a redesigned version of our <a href="/career-quiz/">career quiz</a>. Which application is more convincing? The person who sent the quiz was immediately in the top 20% of applicants, despite having very little formal experience.
@@ -186,9 +185,8 @@ This is what the web engineer did with our career quiz, as above.
 
 See some more examples in <a href="https://medium.com/life-learning/how-to-get-any-job-you-want-even-if-you-re-unqualified-6f49a65f5491#.6d0cinu5j">this article</a> (8min read, also where we got the term “pre-interview project”).
 
-<div id="youtube-3p28MFt8RBA" class="wrap-video">
-    <div class="lazyYT" data-youtube-id="3p28MFt8RBA" data-ratio="16:9" data-parameters="modestbranding=1&show_info=1&theme=light" data-autoplay="0"></div>
-</div>
+!ytb-3p28MFt8RBA
+
 Speaking from personal experience, we’ve overseen four years’ worth of competitive application processes at the <a href="https://centreforeffectivealtruism.org/">Centre for Effective Altruism</a>, and doing either of these would immediately put you in the top 20% of applicants, even if your suggestions weren’t that good. It demonstrates a lot of enthusiasm, and most people hardly know anything about the role they are applying for.
 
 <h4>Trial period</h4>
@@ -280,23 +278,23 @@ Also focus on developing strong skills and crushing it in your work. The best ma
 Getting a job can be an unpleasant process, but if you go through the steps in this article, you’ll give yourself the best chance of success. And that will make sure you fulfil your potential to find a satisfying career and contribute to the world.
 
 <div class="panel clearfix">
-    
+
 ## Apply this to your own career
 
-    What are the most important three steps to take in order to get into your top options?
+What are the most important three steps to take in order to get into your top options?
 
-    Try to be as specific as possible. Some good examples: complete an online course in statistics; follow up with my boss at my last internship; read my top-recommended problem profile. The key steps probably involve speaking to people.
+Try to be as specific as possible. Some good examples: complete an online course in statistics; follow up with my boss at my last internship; read my top-recommended problem profile. The key steps probably involve speaking to people.
 
-    When are you going to do each of these? Many studies have shown that writing down *when* you’ll do a task makes it much more likely you’ll actually do it – it’s called an “implementation intention”.
+When are you going to do each of these? Many studies have shown that writing down *when* you’ll do a task makes it much more likely you’ll actually do it – it’s called an “implementation intention”.
 
 </div>
 <div class="well bg-gray-lighter margin-bottom margin-top padding-top-small padding-bottom-small">
-    <h2 class="no_toc"><small>Part 12: </small>The single biggest to boost your career. Join a community.</h2>
-    <a href="/career-guide/community/" class="btn btn-primary">Continue &rarr;</a>
+<h2 class="no_toc"><small>Part 12: </small>The single biggest to boost your career. Join a community.</h2>
+<a href="/career-guide/community/" class="btn btn-primary">Continue &rarr;</a>
 
-    If you&#8217;re new, <a href="/career-guide/">go to the start of the guide.</a>
+If you&#8217;re new, <a href="/career-guide/">go to the start of the guide.</a>
 
-    No time right now? Subscribe to <a href="/newsletter">our newsletter</a> and we’ll send you one article each week.
+No time right now? Subscribe to <a href="/newsletter">our newsletter</a> and we’ll send you one article each week.
 
 </div>
 <strong><a href="https://www.youtube.com/watch?v=bWahgmZEx8Y" target="_blank">Take a break.</a></strong>
