--- a/11.md
+++ b/11.md
@@ -27,6 +27,8 @@ By <span class="byline author vcard"><a href="https://80000hours.org/author/benj
 
 ![twitter idiot V6](https://cdn.80000hours.org/wp-content/uploads/2016/04/twitter-idiot-V6-1024x537.png)
 
+![twitter idiot V6](https://cdn.80000hours.org/wp-content/uploads/2016/04/twitter-idiot-V6-1024x537.png)
+
 When it comes to advice on how to get a job, most of it is pretty bad.
 
 1. CollegeFeed suggests that you “be confident” as their first interview tip, which is a bit like suggesting that you should “be employable”.
@@ -277,7 +279,9 @@ Also focus on developing strong skills and crushing it in your work. The best ma
 
 Getting a job can be an unpleasant process, but if you go through the steps in this article, you’ll give yourself the best chance of success. And that will make sure you fulfil your potential to find a satisfying career and contribute to the world.
 
+```
 <div class="panel clearfix">
+```
 
 ## Apply this to your own career
 
