--- a/13.md
+++ b/13.md
@@ -41,7 +41,8 @@ To have a truly fulfilling life, we need to turn outwards rather than inwards. R
 
 As we’ve seen, by using our fortunate positions and acting strategically, there’s a huge amount we can all do to help others. And we can do this at little cost to ourselves, and most likely while having a more successful and satisfying career too.
 
-<h2>The entire guide, in one minute</h2>
+## The entire guide, in one minute
+
 <strong>To have a good career, do what contributes.</strong> Rather than expect to discover your passion in a flash of insight, your fulfillment will grow over time as you learn more about what fits, master valuable skills, and use them to help others. (<a href="/career-guide/job-satisfaction/">Part 1</a>.)
 
 To do what contributes, here&#8217;s where to focus over time. Each step can allow you to have a much greater impact.
@@ -60,16 +61,26 @@ Don’t waste them.
 
 ```
 <div class="well bg-gray-lighter margin-bottom margin-top padding-top-small padding-bottom-small">
-<h2><small>What now? If you haven’t already made your plan:</small> Use our tool</h2>
-<p>It helps you apply all the ideas in the guide to your own situation.</p>
-<p><a href="/career-planning-tool/" title="" class="btn btn-primary">Continue</a></p>
-<h2><small>Made a plan but still have questions?</small> Ask our community in our LinkedIn group</h2>
-<p>The group is also a great way to find people who can help you take action on your plans. It has over 5,000 members covering most career paths.</p>
-<p><a href="https://www.linkedin.com/groups/5057625" title="" class="btn btn-default">Ask a question</a></p>
-<h2><small>Want to go into more depth?</small> Check out the rest of our research</h2>
-<p>We have profiles of specific areas, an advanced career guide, a recommended further reading, and much more. Keep learning and become an expert on social impact career choice. We admire your stamina!</p>
-<p><a href="/research/" title="" class="btn btn-default">Read more</a></p>
-<h2><small>Help us out in 10 seconds:</small> Share the guide</h2>
+```
+
+## <small>What now? If you haven’t already made your plan:</small> Use our tool
+
+It helps you apply all the ideas in the guide to your own situation.
+<a href="/career-planning-tool/" title="" class="btn btn-primary">Continue</a>
+
+## <small>Made a plan but still have questions?</small> Ask our community in our LinkedIn group
+
+The group is also a great way to find people who can help you take action on your plans. It has over 5,000 members covering most career paths.
+<a href="https://www.linkedin.com/groups/5057625" title="" class="btn btn-default">Ask a question</a>
+
+## <small>Want to go into more depth?</small> Check out the rest of our research
+
+We have profiles of specific areas, an advanced career guide, a recommended further reading, and much more. Keep learning and become an expert on social impact career choice. We admire your stamina!
+<a href="/research/" title="" class="btn btn-default">Read more</a>
+
+## <small>Help us out in 10 seconds:</small> Share the guide
+
+```
 <p>If you’ve enjoyed the guide, share it with a friend and help us reach more people.</p>
 <p><a href="/share/" title="" class="btn btn-primary">Help out</a></p>
 </div>
